--- a/BrakingDistanceSimulatorPage/src/less/navbar.less
+++ b/BrakingDistanceSimulatorPage/src/less/navbar.less
@@ -4,7 +4,7 @@ a, span {
   cursor: default;
 }
 
-a{background-color: @darkblue,}
+a{background-color: @darkblue;}
 
 .navbar-default {
   background-color: @darkblue;
