--- a/BrakingDistanceSimulatorPage/src/less/style.less
+++ b/BrakingDistanceSimulatorPage/src/less/style.less
@@ -7,6 +7,9 @@ html, body {
   padding: 0;
   font-family: 'Ubuntu', sans-serif;
   height: 100%;
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
 
 //wrapper
